# Fungi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fungi.py  manage.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml
docs/: index.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css
docs/community/: index.md
docs/config/: commands.md  index.md  other.md  settings.md
docs/developers/: docs.md  fungi.md  index.md  overview.md
docs/guides/: getting-started.md  index.md
src/fungi/: __main__.py  fungi.py  manage.py
